# GPU-Computing2026

./: .CMakeLists.txt.swp  .clangd  .clangd.swp  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cluster_spawn.sh  cluster_spawn2.sh  cudaKernel.cu  execute.sh  execute2.sh  main  main.c  main.cpp  main.cu  performance_functions.cpp  results_SpMV.csv  sharedmem.md  te.cu
Report/: IEEE-conference-template-062824.aux  IEEE-conference-template-062824.tex
include/: CMakePresets.json  debug.cpp  debug.h  mean.cpp  performance_functions.cpp  performance_functions.h  preprocessing.cpp  preprocessing.h  types.cpp  types.h
include/kernels/: kernel.cu
kernels/: kernel.cu
src/: main.cu
src/kernels/: kernel.cu
